 - Set the JAXP Source's systemID property based on the Representation.identifier 
   property if available (SaxRepresentation and TransformRepresentation).
 - Simple could log an exception if the input entity was already closed when returning
   from the handling, as we are trying to consume unread bytes. Reported by Matt Allen.
 - Allow to delete empty directories. Reported by Paul J. Lucas.

[Enhancements]
 - Clarified Template#parse Javadocs. Suggested by Jonathan Hall.
 - Upgraded Jetty to 6.1.6

1.0.6 (2007-11-08)
[Bugs fixed]
 - Fixed error when parsing weak Etags. Reported by Larry Gately and John R. Fallows.
 - Fixed Redirector which didn't implement the SEE_OTHER type of redirections.
 - Fixed directory listing error in the File connector. Reported by Jochen Bedersdorfer.
 - The lack of root URI normalization by Directory could lead to listing issues.
   Reported by Joel Nelson and Rob Heittman.
 - Fixed bug in the SimpleWeb connector which requires the request input stream to be 
   fully read. Otherwise, the connectors hangs. Reported by Adam Taft, Nicolas Capdevila 
   and Rob Heittman.
 - ChallengeRequests with a null realm are properly formatted. Reported by Sumit Lohia.
 - The message logged when an authentication scheme is not supported by NRE is now only 
   of FINE level instead of WARNING level. Reported by Sumit Lohia.
 - Guard.getSecrets() method was not properly synchronized. Reported by Tim Peierls.
 - The Redirector wasn't properly rewriting the redirection URIs in the dispatcher mode.
 - The IO threads created by ByteUtils are now explicitely set as non daemon threads. The 
   internal pipe stream now times out if nobody uses it. Suggested by Tim Peierls.
 - Indexed directories were not properly handled with the CLAP protocol. Reported by Rob 
   Heittman.
 - Directory restlet not showing files with whitespaces. Reported by Davide Angelocola.
 - Fixed potential NPE with invalid dates in headers. Reported by Henry Story.